when you click the word, you can look up it in the dictionary

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <app-article-viewer
     [article]="currentArticle?.pharases"
     (playPharase)="onPlayPharase($event)"
+    (stopPharase)="onPlayOrStop()"
   ></app-article-viewer>
   <app-player
     [isPlaying]="isPlaying"
