--- a/src/app/layout/article-viewer/article-viewer.component.less
+++ b/src/app/layout/article-viewer/article-viewer.component.less
@@ -7,10 +7,13 @@
 
 .pharase {
   margin-bottom: 16px;
-  cursor: pointer;
 }
 .pharase-en {
   font-size: large;
+  .word {
+    margin-right: 4px;
+    cursor: pointer;
+  }
 }
 .pharase-ja {
   font-size: small;
