--- a/src/app/layout/article-viewer/article-viewer.component.less
+++ b/src/app/layout/article-viewer/article-viewer.component.less
@@ -8,14 +8,14 @@
 .pharase {
   margin-bottom: 16px;
 }
-.pharase-en {
+.pharase {
   font-size: large;
   .word {
     margin-right: 4px;
     cursor: pointer;
   }
 }
-.pharase-ja {
+.pharase-sub {
   font-size: small;
   color: #93a5b1;
   user-select: none;
