--- a/src/styles.less
+++ b/src/styles.less
@@ -22,3 +22,22 @@ body {
     overflow-y: scroll;
   }
 }
+.api-body {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+}
+.title-link {
+  color: inherit;
+  text-decoration: none;
+  background-color: #fff;
+  padding: 8px 16px;
+  margin-bottom: 16px;
+  border-radius: 4px;
+  font-size: 1.2rem;
+  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+    0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
+.title {
+  display: inline-block;
+}
